feat(Summary): New part of frontend to see current playlist data
